--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -59,7 +59,10 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   min-height: 100vh;
+  overflow: hidden;
   color: var(--color-text);
   background: var(--color-background);
   transition:
@@ -83,4 +86,5 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
